<resources>
    <string name="app_name">NotesMVVM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="room">ROOM</string>
    <string name="type_db">Select type of Database:</string>
    <string name="firebase">FIREBASE</string>
    <string name="login">LOGIN</string>
    <string name="edit_password">Password:</string>
    <string name="edit_login">Login:</string>
    <string name="delete">Delete</string>
    <string name="input_wrong_email_password">Input Email  and Password</string>
</resources>