<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea"
    android:focusableInTouchMode="true"
    tools:context="screen.start.StartFragment">


    <Button
        android:id="@+id/btn_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:backgroundTint="@color/orange"
        android:hint="@string/room"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_firebase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:backgroundTint="@color/orange"
        android:hint="@string/firebase"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_room"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="@dimen/drawablePadding"
        android:hint="@string/edit_login"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding"
        android:textSize="@dimen/title_text_size"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_firebase"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="@dimen/drawablePadding"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:padding="@dimen/padding"
        android:textSize="@dimen/title_text_size"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_login_firebase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:backgroundTint="@color/orange"
        android:hint="@string/login"
        android:textColorHint="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password" />


</androidx.constraintlayout.widget.ConstraintLayout>